05-liveness-probes/01-logger-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: logtest
spec:
  containers:
    - name: logger
      image: bogd/logging-test
