05-liveness-probes/02-logger-pod-custom-message.yaml
apiVersion: v1
kind: Pod
metadata:
  name: logtest
spec:
  containers:
    - name: logger
      image: bogd/logging-test
