05-liveness-probes/03-logger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger
spec:
  replicas: 3
  selector:
    matchLabels:
      app: logger-depl
  template:
    metadata:
      labels:
        app: logger-depl
    spec:
      containers:
      - name: logger
        image: bogd/logging-test:latest
