05-liveness-probes/07-deployment-liveness.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webserver
        image: bogd/go-webserver:latest
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
          periodSeconds: 15
          failureThreshold: 2
