05-liveness-probes/10-deployment-readiness.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webserver
        image: bogd/go-webserver:latest
        #        env:
        #- name: LOG_MESSAGE
        #  value: "test message from bogd"
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
          capabilities:
            drop: ["ALL"]
          seccompProfile: 
            type: RuntimeDefault
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
          periodSeconds: 2
          failureThreshold: 2    
        startupProbe:
          httpGet:
            path: /healthz
            port: 8000
          periodSeconds: 2
          failureThreshold: 30   
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8000
          periodSeconds: 2
          failureThreshold: 2
