05-liveness-probes/05-webserver-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: webapp
spec:
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 8000
  type: ClusterIP
