05-liveness-probes/06-webserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
spec:
  ingressClassName: nginx
  rules:
  - host: webapp-00.labs.sass.ro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: webapp
            port: 
              number: 8000
